--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Odin Recipes</title>
 		<meta name="author" content="Im-Ravi-Kanth" />
-		<meta
-			name="description"
-			content="Place to know my favorite recipes and their making process."
-		/>
-		<meta
-			name="keywords"
-			content="veg biryani, paneer butter masala curry, veg manchurian fried rice"
-		/>
+		<meta name="description"
+			  content="Place to know my favorite recipes and their making process." />
+		<meta name="keywords"
+			  content="veg biryani, paneer butter masala curry, veg manchurian fried rice" />
 		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
 
@@ -26,47 +23,29 @@
 			<div class="spacer-2"></div>
 			<div class="recipes">
 				<div class="recipe">
-					<a
-						class="recipe-box"
-						href="./recipes/veg_biryani.html"
-						title="Veg Biryani"
-						target="_blank"
-					>
-						<img
-							class="small-recipe-image"
-							src="./images/veg-biryani.jpg"
-							alt="veg-biryani"
-						/>
+					<a class="recipe-box" href="./recipes/veg_biryani.html"
+					   title="Veg Biryani" target="_blank">
+						<img class="small-recipe-image"
+							 src="./images/veg-biryani.jpg" alt="veg-biryani" />
 						<h3>Veg Biryani</h3>
 					</a>
 				</div>
 				<div class="recipe">
-					<a
-						class="recipe-box"
-						href="./recipes/paneer_curry.html"
-						title="Paneer Butter Masala Curry"
-						target="_blank"
-					>
-						<img
-							class="small-recipe-image"
-							src="./images/paneer-butter-masala.JPG"
-							alt="paneer-butter-masala"
-						/>
+					<a class="recipe-box" href="./recipes/paneer_curry.html"
+					   title="Paneer Butter Masala Curry" target="_blank">
+						<img class="small-recipe-image"
+							 src="./images/paneer-butter-masala.JPG"
+							 alt="paneer-butter-masala" />
 						<h3>Paneer Butter Masala Curry</h3>
 					</a>
 				</div>
 				<div class="recipe">
-					<a
-						class="recipe-box"
-						href="./recipes/manchurian_fried_rice.html"
-						title="Veg Manchurian Fried Rice"
-						target="_blank"
-					>
-						<img
-							class="small-recipe-image"
-							src="./images/Veg-manchurian-fried-rice.webp"
-							alt="veg-manchurian-fried-rice"
-						/>
+					<a class="recipe-box"
+					   href="./recipes/manchurian_fried_rice.html"
+					   title="Veg Manchurian Fried Rice" target="_blank">
+						<img class="small-recipe-image"
+							 src="./images/Veg-manchurian-fried-rice.webp"
+							 alt="veg-manchurian-fried-rice" />
 						<h3>Veg Manchurian Fried Rice</h3>
 					</a>
 				</div>
@@ -77,4 +56,5 @@
 			<p>Odin Recipes &copy; 2023</p>
 		</footer>
 	</body>
+
 </html>
